# BackTestEngine

./: .gitignore  BackTestEngine.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  system.md  system_database.md
cpp/: CMakeLists.txt  README.md  fill_simulator.cpp  kalman_filter.cpp  kalman_filter_test.cpp  kalman_hedge_ratio.cpp  kalman_hedge_ratio.hpp
docs/: kalman_state_space.md
scripts/: README.md  __init__.py  benchmark_kalman.py  compute_metrics.py  dashboard.py  ingest_alpha_vantage.py  ingest_csv.py  report_backtest.py  run_backtest_e2e.py  validate_e2e.py
src/: __init__.py
src/backtest/: __init__.py  data_handler.py  events.py  execution.py  metrics_persistence.py  performance.py  portfolio.py  position_sizing.py  risk_attribution.py  run.py  strategy.py
tests/: __init__.py  conftest.py  test_cointegration.py  test_data_handler.py  test_events.py  test_execution.py  test_ingestion.py  test_kalman.py  test_ou.py  test_parquet_bars.py  test_performance.py  test_portfolio.py  test_position_sizing.py  test_preprocessing.py  test_reference.py  test_risk_attribution.py  test_run.py  test_schema.py  test_strategy.py  test_validation.py
